jupyterhub/base/jupyterhub-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jupyterhub
spec:
  finalizers:
  - kubernetes
